--- a/archives/toutiao-search/2023-11-16.md
+++ b/archives/toutiao-search/2023-11-16.md
@@ -1,56 +1,74 @@
 # 2023-11-16
 
-共 100 条
+共 113 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Nov 16 2023 04:01:37 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Nov 16 2023 05:00:43 GMT+0800 (China Standard Time) -->
 1. [习近平抵达会场 拜登在下车处迎接](https://so.toutiao.com/search?keyword=习近平抵达会场+拜登在下车处迎接)
+1. [独家视频：习近平同拜登握手合影](https://so.toutiao.com/search?keyword=独家视频：习近平同拜登握手合影)
+1. [携手构建亚太命运共同体](https://so.toutiao.com/search?keyword=携手构建亚太命运共同体)
 1. [走进中美元首会晤的乡村庄园](https://so.toutiao.com/search?keyword=走进中美元首会晤的乡村庄园)
-1. [少年强、青年强则中国强](https://so.toutiao.com/search?keyword=少年强、青年强则中国强)
-1. [胡锡进：国际社会如何看中美元首会晤](https://so.toutiao.com/search?keyword=胡锡进：国际社会如何看中美元首会晤)
 1. [王自如在格力到底做了什么](https://so.toutiao.com/search?keyword=王自如在格力到底做了什么)
-1. [渐冻人蔡磊腿脚已在逐渐恢复](https://so.toutiao.com/search?keyword=渐冻人蔡磊腿脚已在逐渐恢复)
-1. [广州电动自行车限行政策正式出台](https://so.toutiao.com/search?keyword=广州电动自行车限行政策正式出台)
-1. [猪肉价格大降超40%是什么原因](https://so.toutiao.com/search?keyword=猪肉价格大降超40%是什么原因)
+1. [胡锡进：国际社会如何看中美元首会晤](https://so.toutiao.com/search?keyword=胡锡进：国际社会如何看中美元首会晤)
 1. [渐冻人蔡磊回应首次用药有效](https://so.toutiao.com/search?keyword=渐冻人蔡磊回应首次用药有效)
+1. [广州电动自行车限行政策正式出台](https://so.toutiao.com/search?keyword=广州电动自行车限行政策正式出台)
 1. [我国平均2个成年人就有1个血糖异常](https://so.toutiao.com/search?keyword=我国平均2个成年人就有1个血糖异常)
+1. [渐冻人蔡磊腿脚已在逐渐恢复](https://so.toutiao.com/search?keyword=渐冻人蔡磊腿脚已在逐渐恢复)
 1. [罗翔辟谣“一夜白头”](https://so.toutiao.com/search?keyword=罗翔辟谣“一夜白头”)
 1. [旧金山机场一路上都是五星红旗](https://so.toutiao.com/search?keyword=旧金山机场一路上都是五星红旗)
 1. [媒体：王自如让全网打工人自愧不如](https://so.toutiao.com/search?keyword=媒体：王自如让全网打工人自愧不如)
-1. [布拉德·皮特认爱小27岁珠宝设计师](https://so.toutiao.com/search?keyword=布拉德·皮特认爱小27岁珠宝设计师)
-1. [美众议长宣布支持特朗普竞选总统](https://so.toutiao.com/search?keyword=美众议长宣布支持特朗普竞选总统)
-1. [“杭州30亿量化跑路”事件冲击扩大](https://so.toutiao.com/search?keyword=“杭州30亿量化跑路”事件冲击扩大)
-1. [“顺其自然”25年累计捐赠1577万](https://so.toutiao.com/search?keyword=“顺其自然”25年累计捐赠1577万)
-1. [女子涉嫌在店内组织卖淫被拘](https://so.toutiao.com/search?keyword=女子涉嫌在店内组织卖淫被拘)
-1. [女演员罗海琼回应发型显老](https://so.toutiao.com/search?keyword=女演员罗海琼回应发型显老)
-1. [东北大爷把楼下积雪砌成20米城墙](https://so.toutiao.com/search?keyword=东北大爷把楼下积雪砌成20米城墙)
-1. [哈马斯谴责以军攻入希法医院](https://so.toutiao.com/search?keyword=哈马斯谴责以军攻入希法医院)
+1. [赵雅芝70岁生日照](https://so.toutiao.com/search?keyword=赵雅芝70岁生日照)
 1. [多家大厂加入鸿蒙开发](https://so.toutiao.com/search?keyword=多家大厂加入鸿蒙开发)
-1. [加沙孩子雨中奔跑庆祝雨季到来](https://so.toutiao.com/search?keyword=加沙孩子雨中奔跑庆祝雨季到来)
-1. [哈马斯称以色列不愿达成停火协议](https://so.toutiao.com/search?keyword=哈马斯称以色列不愿达成停火协议)
+1. [读懂“体制化”的王自如](https://so.toutiao.com/search?keyword=读懂“体制化”的王自如)
+1. [美众议长宣布支持特朗普竞选总统](https://so.toutiao.com/search?keyword=美众议长宣布支持特朗普竞选总统)
+1. [女子涉嫌在店内组织卖淫被拘](https://so.toutiao.com/search?keyword=女子涉嫌在店内组织卖淫被拘)
+1. [女儿遇电诈母亲11万积蓄被骗光](https://so.toutiao.com/search?keyword=女儿遇电诈母亲11万积蓄被骗光)
 1. [美国10月通胀数据超预期降温](https://so.toutiao.com/search?keyword=美国10月通胀数据超预期降温)
-1. [作品赏析：海峡两岸摄影名家邀请展](https://so.toutiao.com/search?keyword=作品赏析：海峡两岸摄影名家邀请展)
-1. [四川射洪柳树中学原校长被查](https://so.toutiao.com/search?keyword=四川射洪柳树中学原校长被查)
+1. [猪肉价格大降超40%是什么原因](https://so.toutiao.com/search?keyword=猪肉价格大降超40%是什么原因)
+1. [俄方：摧毁多架来袭乌克兰无人机](https://so.toutiao.com/search?keyword=俄方：摧毁多架来袭乌克兰无人机)
+1. [美总统候选人称若当选将社媒实名制](https://so.toutiao.com/search?keyword=美总统候选人称若当选将社媒实名制)
+1. [“顺其自然”25年累计捐赠1577万](https://so.toutiao.com/search?keyword=“顺其自然”25年累计捐赠1577万)
+1. [美法官对特朗普初选资格作出裁决](https://so.toutiao.com/search?keyword=美法官对特朗普初选资格作出裁决)
+1. [“杭州30亿量化跑路”事件冲击扩大](https://so.toutiao.com/search?keyword=“杭州30亿量化跑路”事件冲击扩大)
+1. [女演员罗海琼回应发型显老](https://so.toutiao.com/search?keyword=女演员罗海琼回应发型显老)
+1. [男子19岁杀人后潜逃35年落网](https://so.toutiao.com/search?keyword=男子19岁杀人后潜逃35年落网)
+1. [高管权色交易事件女子当选非独立董事](https://so.toutiao.com/search?keyword=高管权色交易事件女子当选非独立董事)
 1. [问界M5追尾施工车 官方回应](https://so.toutiao.com/search?keyword=问界M5追尾施工车+官方回应)
 1. [消息称政府拟再出手救楼市](https://so.toutiao.com/search?keyword=消息称政府拟再出手救楼市)
+1. [澳总理与反对党党首在议会激烈交锋](https://so.toutiao.com/search?keyword=澳总理与反对党党首在议会激烈交锋)
+1. [绑架杀害同村女性闫军军被执行枪决](https://so.toutiao.com/search?keyword=绑架杀害同村女性闫军军被执行枪决)
+1. [初二女生被拖入地下道施暴](https://so.toutiao.com/search?keyword=初二女生被拖入地下道施暴)
+1. [中国传媒大学一学生公寓附近起火](https://so.toutiao.com/search?keyword=中国传媒大学一学生公寓附近起火)
+1. [58岁退休的原市委书记落马](https://so.toutiao.com/search?keyword=58岁退休的原市委书记落马)
+1. [赖岳谦： 美国越打台湾牌就越倒霉](https://so.toutiao.com/search?keyword=赖岳谦：+美国越打台湾牌就越倒霉)
+1. [中传回应菜鸟驿站火情](https://so.toutiao.com/search?keyword=中传回应菜鸟驿站火情)
+1. [深圳已现腰斩二手房源](https://so.toutiao.com/search?keyword=深圳已现腰斩二手房源)
+1. [四川西昌警方破获“毒鹅肠”大案](https://so.toutiao.com/search?keyword=四川西昌警方破获“毒鹅肠”大案)
+1. [乌称在阿夫迪夫卡挡住俄军十分困难](https://so.toutiao.com/search?keyword=乌称在阿夫迪夫卡挡住俄军十分困难)
+1. [年近70岁的厅官郭宝成被捕](https://so.toutiao.com/search?keyword=年近70岁的厅官郭宝成被捕)
+1. [测评红魔9Pro：唯一盖后纯平手机](https://so.toutiao.com/search?keyword=测评红魔9Pro：唯一盖后纯平手机)
+1. [泽连斯基：俄军正在前线加强进攻](https://so.toutiao.com/search?keyword=泽连斯基：俄军正在前线加强进攻)
+1. [小宝宝“熟练作案”开电视放动画片](https://so.toutiao.com/search?keyword=小宝宝“熟练作案”开电视放动画片)
+1. [大闸蟹每只跌破10元](https://so.toutiao.com/search?keyword=大闸蟹每只跌破10元)
+1. [1-10月商品房销售面积同比下降7.8%](https://so.toutiao.com/search?keyword=1-10月商品房销售面积同比下降7.8%)
+1. [大爷冰上打陀螺被劝上岸激动回怼](https://so.toutiao.com/search?keyword=大爷冰上打陀螺被劝上岸激动回怼)
+1. [中国气象局启动三级应急响应](https://so.toutiao.com/search?keyword=中国气象局启动三级应急响应)
+1. [富力地产新增被执行12.5亿](https://so.toutiao.com/search?keyword=富力地产新增被执行12.5亿)
+1. [少年强、青年强则中国强](https://so.toutiao.com/search?keyword=少年强、青年强则中国强)
+1. [布拉德·皮特认爱小27岁珠宝设计师](https://so.toutiao.com/search?keyword=布拉德·皮特认爱小27岁珠宝设计师)
+1. [东北大爷把楼下积雪砌成20米城墙](https://so.toutiao.com/search?keyword=东北大爷把楼下积雪砌成20米城墙)
+1. [哈马斯谴责以军攻入希法医院](https://so.toutiao.com/search?keyword=哈马斯谴责以军攻入希法医院)
+1. [加沙孩子雨中奔跑庆祝雨季到来](https://so.toutiao.com/search?keyword=加沙孩子雨中奔跑庆祝雨季到来)
+1. [哈马斯称以色列不愿达成停火协议](https://so.toutiao.com/search?keyword=哈马斯称以色列不愿达成停火协议)
+1. [作品赏析：海峡两岸摄影名家邀请展](https://so.toutiao.com/search?keyword=作品赏析：海峡两岸摄影名家邀请展)
+1. [四川射洪柳树中学原校长被查](https://so.toutiao.com/search?keyword=四川射洪柳树中学原校长被查)
 1. [魅族21将挑战全球最窄物理四等边](https://so.toutiao.com/search?keyword=魅族21将挑战全球最窄物理四等边)
-1. [美总统候选人称若当选将社媒实名制](https://so.toutiao.com/search?keyword=美总统候选人称若当选将社媒实名制)
 1. [女子疑练车练崩溃暴砸教练车](https://so.toutiao.com/search?keyword=女子疑练车练崩溃暴砸教练车)
 1. [回响原著作者揭秘书中彩蛋](https://so.toutiao.com/search?keyword=回响原著作者揭秘书中彩蛋)
-1. [赵雅芝70岁生日照](https://so.toutiao.com/search?keyword=赵雅芝70岁生日照)
-1. [大闸蟹每只跌破10元](https://so.toutiao.com/search?keyword=大闸蟹每只跌破10元)
-1. [四川西昌警方破获“毒鹅肠”大案](https://so.toutiao.com/search?keyword=四川西昌警方破获“毒鹅肠”大案)
-1. [澳总理与反对党党首在议会激烈交锋](https://so.toutiao.com/search?keyword=澳总理与反对党党首在议会激烈交锋)
-1. [读懂“体制化”的王自如](https://so.toutiao.com/search?keyword=读懂“体制化”的王自如)
-1. [美法官对特朗普初选资格作出裁决](https://so.toutiao.com/search?keyword=美法官对特朗普初选资格作出裁决)
 1. [男子2天没上班 同事报警救他一命](https://so.toutiao.com/search?keyword=男子2天没上班+同事报警救他一命)
-1. [大爷冰上打陀螺被劝上岸激动回怼](https://so.toutiao.com/search?keyword=大爷冰上打陀螺被劝上岸激动回怼)
 1. [1-10月全国房地产开发投资下降9.3%](https://so.toutiao.com/search?keyword=1-10月全国房地产开发投资下降9.3%)
 1. [湖南省委书记到烂尾楼暗访](https://so.toutiao.com/search?keyword=湖南省委书记到烂尾楼暗访)
-1. [58岁退休的原市委书记落马](https://so.toutiao.com/search?keyword=58岁退休的原市委书记落马)
-1. [深圳已现腰斩二手房源](https://so.toutiao.com/search?keyword=深圳已现腰斩二手房源)
 1. [媒体人：双11释放了3个信号](https://so.toutiao.com/search?keyword=媒体人：双11释放了3个信号)
-1. [1-10月商品房销售面积同比下降7.8%](https://so.toutiao.com/search?keyword=1-10月商品房销售面积同比下降7.8%)
 1. [高校教学楼突现臭味 师生下楼躲避](https://so.toutiao.com/search?keyword=高校教学楼突现臭味+师生下楼躲避)
 1. [困扰近亿人的慢阻肺究竟是什么](https://so.toutiao.com/search?keyword=困扰近亿人的慢阻肺究竟是什么)
 1. [前10月房地产开发投资仍处低位](https://so.toutiao.com/search?keyword=前10月房地产开发投资仍处低位)
@@ -60,11 +78,9 @@
 1. [卡梅伦将如何影响中英关系未来走向](https://so.toutiao.com/search?keyword=卡梅伦将如何影响中英关系未来走向)
 1. [“双十一”在台掀热潮 国台办回应](https://so.toutiao.com/search?keyword=“双十一”在台掀热潮+国台办回应)
 1. [轮船突发船体断裂下沉 无人员伤亡](https://so.toutiao.com/search?keyword=轮船突发船体断裂下沉+无人员伤亡)
-1. [初二女生被拖入地下道施暴](https://so.toutiao.com/search?keyword=初二女生被拖入地下道施暴)
 1. [94岁中国女首富曾分300亿给儿媳](https://so.toutiao.com/search?keyword=94岁中国女首富曾分300亿给儿媳)
 1. [郑志刚：把香港打造成家族办公室枢纽](https://so.toutiao.com/search?keyword=郑志刚：把香港打造成家族办公室枢纽)
 1. [媒体：任性罚款罚不出美丽乡村](https://so.toutiao.com/search?keyword=媒体：任性罚款罚不出美丽乡村)
-1. [年近70岁的厅官郭宝成被捕](https://so.toutiao.com/search?keyword=年近70岁的厅官郭宝成被捕)
 1. [中美会晤值得关注的几点问题](https://so.toutiao.com/search?keyword=中美会晤值得关注的几点问题)
 1. [多名男子开面包车进村偷大鹅](https://so.toutiao.com/search?keyword=多名男子开面包车进村偷大鹅)
 1. [中国前十大贸易伙伴8个是APEC成员](https://so.toutiao.com/search?keyword=中国前十大贸易伙伴8个是APEC成员)
@@ -85,7 +101,6 @@
 1. [古特雷斯呼吁努力缩小气候雄心差距](https://so.toutiao.com/search?keyword=古特雷斯呼吁努力缩小气候雄心差距)
 1. [市民称滑雪时偶遇雷军 当事人回应](https://so.toutiao.com/search?keyword=市民称滑雪时偶遇雷军+当事人回应)
 1. [外媒：Mate 60威胁iPhone 15地位](https://so.toutiao.com/search?keyword=外媒：Mate+60威胁iPhone 15地位)
-1. [测评红魔9Pro：唯一盖后纯平手机](https://so.toutiao.com/search?keyword=测评红魔9Pro：唯一盖后纯平手机)
 1. [北汽男篮正常备战北京德比](https://so.toutiao.com/search?keyword=北汽男篮正常备战北京德比)
 1. [美方多位高级官员机场迎接习近平](https://so.toutiao.com/search?keyword=美方多位高级官员机场迎接习近平)
 1. [中美元首会晤预计时长3到4小时](https://so.toutiao.com/search?keyword=中美元首会晤预计时长3到4小时)
@@ -99,9 +114,7 @@
 1. [CBA：北京控股109-103北京北汽](https://so.toutiao.com/search?keyword=CBA：北京控股109-103北京北汽)
 1. [宁夏警方悬赏通缉四名在逃嫌疑人](https://so.toutiao.com/search?keyword=宁夏警方悬赏通缉四名在逃嫌疑人)
 1. [特困生买苹果四件套看千元演唱会](https://so.toutiao.com/search?keyword=特困生买苹果四件套看千元演唱会)
-1. [赖岳谦： 美国越打台湾牌就越倒霉](https://so.toutiao.com/search?keyword=赖岳谦：+美国越打台湾牌就越倒霉)
 1. [男子查出结节一年后成肺癌晚期](https://so.toutiao.com/search?keyword=男子查出结节一年后成肺癌晚期)
-1. [绑架杀害同村女性闫军军被执行枪决](https://so.toutiao.com/search?keyword=绑架杀害同村女性闫军军被执行枪决)
 1. [年轻夫妻返乡走上种菜之路](https://so.toutiao.com/search?keyword=年轻夫妻返乡走上种菜之路)
 1. [驻日使馆驳斥日本政要涉台消极言论](https://so.toutiao.com/search?keyword=驻日使馆驳斥日本政要涉台消极言论)
 <!-- END TOUTIAO -->
