--- a/archives/toutiao-search/2023-11-16.md
+++ b/archives/toutiao-search/2023-11-16.md
@@ -1,68 +1,79 @@
 # 2023-11-16
 
-共 118 条
+共 129 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Nov 16 2023 06:00:41 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Nov 16 2023 07:00:42 GMT+0800 (China Standard Time) -->
 1. [习近平抵达会场 拜登在下车处迎接](https://so.toutiao.com/search?keyword=习近平抵达会场+拜登在下车处迎接)
 1. [独家视频：习近平同拜登握手合影](https://so.toutiao.com/search?keyword=独家视频：习近平同拜登握手合影)
 1. [携手构建亚太命运共同体](https://so.toutiao.com/search?keyword=携手构建亚太命运共同体)
 1. [走进中美元首会晤的乡村庄园](https://so.toutiao.com/search?keyword=走进中美元首会晤的乡村庄园)
-1. [胡锡进：国际社会如何看中美元首会晤](https://so.toutiao.com/search?keyword=胡锡进：国际社会如何看中美元首会晤)
 1. [王自如在格力到底做了什么](https://so.toutiao.com/search?keyword=王自如在格力到底做了什么)
+1. [胡锡进：国际社会如何看中美元首会晤](https://so.toutiao.com/search?keyword=胡锡进：国际社会如何看中美元首会晤)
 1. [渐冻人蔡磊回应首次用药有效](https://so.toutiao.com/search?keyword=渐冻人蔡磊回应首次用药有效)
-1. [我国平均2个成年人就有1个血糖异常](https://so.toutiao.com/search?keyword=我国平均2个成年人就有1个血糖异常)
-1. [猪肉价格大降超40%是什么原因](https://so.toutiao.com/search?keyword=猪肉价格大降超40%是什么原因)
+1. [以称控制加沙哈马斯宪兵总部](https://so.toutiao.com/search?keyword=以称控制加沙哈马斯宪兵总部)
+1. [“杭州30亿量化跑路”事件冲击扩大](https://so.toutiao.com/search?keyword=“杭州30亿量化跑路”事件冲击扩大)
 1. [渐冻人蔡磊腿脚已在逐渐恢复](https://so.toutiao.com/search?keyword=渐冻人蔡磊腿脚已在逐渐恢复)
 1. [罗翔辟谣“一夜白头”](https://so.toutiao.com/search?keyword=罗翔辟谣“一夜白头”)
 1. [旧金山机场一路上都是五星红旗](https://so.toutiao.com/search?keyword=旧金山机场一路上都是五星红旗)
 1. [媒体：王自如让全网打工人自愧不如](https://so.toutiao.com/search?keyword=媒体：王自如让全网打工人自愧不如)
 1. [广州电动自行车限行政策正式出台](https://so.toutiao.com/search?keyword=广州电动自行车限行政策正式出台)
-1. [美众议长宣布支持特朗普竞选总统](https://so.toutiao.com/search?keyword=美众议长宣布支持特朗普竞选总统)
-1. [统计局：10月份生产原油1733万吨](https://so.toutiao.com/search?keyword=统计局：10月份生产原油1733万吨)
-1. [“杭州30亿量化跑路”事件冲击扩大](https://so.toutiao.com/search?keyword=“杭州30亿量化跑路”事件冲击扩大)
 1. [女子涉嫌在店内组织卖淫被拘](https://so.toutiao.com/search?keyword=女子涉嫌在店内组织卖淫被拘)
+1. [美众议长宣布支持特朗普竞选总统](https://so.toutiao.com/search?keyword=美众议长宣布支持特朗普竞选总统)
+1. [猪肉价格大降超40%是什么原因](https://so.toutiao.com/search?keyword=猪肉价格大降超40%是什么原因)
 1. [女演员罗海琼回应发型显老](https://so.toutiao.com/search?keyword=女演员罗海琼回应发型显老)
-1. [美总统候选人称若当选将社媒实名制](https://so.toutiao.com/search?keyword=美总统候选人称若当选将社媒实名制)
 1. [男子19岁杀人后潜逃35年落网](https://so.toutiao.com/search?keyword=男子19岁杀人后潜逃35年落网)
-1. [多家大厂加入鸿蒙开发](https://so.toutiao.com/search?keyword=多家大厂加入鸿蒙开发)
-1. [年近70岁的厅官郭宝成被捕](https://so.toutiao.com/search?keyword=年近70岁的厅官郭宝成被捕)
+1. [男子2天没上班 同事报警救他一命](https://so.toutiao.com/search?keyword=男子2天没上班+同事报警救他一命)
+1. [红十字会医生讲述加沙医院救治情况](https://so.toutiao.com/search?keyword=红十字会医生讲述加沙医院救治情况)
 1. [女儿遇电诈母亲11万积蓄被骗光](https://so.toutiao.com/search?keyword=女儿遇电诈母亲11万积蓄被骗光)
-1. [中国传媒大学一学生公寓附近起火](https://so.toutiao.com/search?keyword=中国传媒大学一学生公寓附近起火)
 1. [问界M5追尾施工车 官方回应](https://so.toutiao.com/search?keyword=问界M5追尾施工车+官方回应)
-1. [美法官对特朗普初选资格作出裁决](https://so.toutiao.com/search?keyword=美法官对特朗普初选资格作出裁决)
 1. [中传回应菜鸟驿站火情](https://so.toutiao.com/search?keyword=中传回应菜鸟驿站火情)
-1. [中国气象局启动三级应急响应](https://so.toutiao.com/search?keyword=中国气象局启动三级应急响应)
-1. [网购深度保洁却只擦玻璃 商家回应](https://so.toutiao.com/search?keyword=网购深度保洁却只擦玻璃+商家回应)
-1. [赵雅芝70岁生日照](https://so.toutiao.com/search?keyword=赵雅芝70岁生日照)
-1. [初二女生被拖入地下道施暴](https://so.toutiao.com/search?keyword=初二女生被拖入地下道施暴)
-1. [富力地产新增被执行12.5亿](https://so.toutiao.com/search?keyword=富力地产新增被执行12.5亿)
-1. [消息称政府拟再出手救楼市](https://so.toutiao.com/search?keyword=消息称政府拟再出手救楼市)
-1. [小宝宝“熟练作案”开电视放动画片](https://so.toutiao.com/search?keyword=小宝宝“熟练作案”开电视放动画片)
+1. [“蓝白”全民调怎么做？朱立伦回应](https://so.toutiao.com/search?keyword=“蓝白”全民调怎么做？朱立伦回应)
 1. [“顺其自然”25年累计捐赠1577万](https://so.toutiao.com/search?keyword=“顺其自然”25年累计捐赠1577万)
-1. [读懂“体制化”的王自如](https://so.toutiao.com/search?keyword=读懂“体制化”的王自如)
+1. [多家大厂加入鸿蒙开发](https://so.toutiao.com/search?keyword=多家大厂加入鸿蒙开发)
+1. [消息称政府拟再出手救楼市](https://so.toutiao.com/search?keyword=消息称政府拟再出手救楼市)
+1. [赵雅芝70岁生日照](https://so.toutiao.com/search?keyword=赵雅芝70岁生日照)
+1. [网购深度保洁却只擦玻璃 商家回应](https://so.toutiao.com/search?keyword=网购深度保洁却只擦玻璃+商家回应)
+1. [中国气象局启动三级应急响应](https://so.toutiao.com/search?keyword=中国气象局启动三级应急响应)
+1. [初二女生被拖入地下道施暴](https://so.toutiao.com/search?keyword=初二女生被拖入地下道施暴)
+1. [小宝宝“熟练作案”开电视放动画片](https://so.toutiao.com/search?keyword=小宝宝“熟练作案”开电视放动画片)
+1. [美法官对特朗普初选资格作出裁决](https://so.toutiao.com/search?keyword=美法官对特朗普初选资格作出裁决)
+1. [通江集团、张保国集资诈骗案一审](https://so.toutiao.com/search?keyword=通江集团、张保国集资诈骗案一审)
+1. [哈尔滨换上“冰雪新装”](https://so.toutiao.com/search?keyword=哈尔滨换上“冰雪新装”)
+1. [成立民营经济发展局释放什么信号](https://so.toutiao.com/search?keyword=成立民营经济发展局释放什么信号)
+1. [富力地产新增被执行12.5亿](https://so.toutiao.com/search?keyword=富力地产新增被执行12.5亿)
 1. [湖南省委书记到烂尾楼暗访](https://so.toutiao.com/search?keyword=湖南省委书记到烂尾楼暗访)
+1. [年近70岁的厅官郭宝成被捕](https://so.toutiao.com/search?keyword=年近70岁的厅官郭宝成被捕)
+1. [媒体：任性罚款罚不出美丽乡村](https://so.toutiao.com/search?keyword=媒体：任性罚款罚不出美丽乡村)
+1. [赖岳谦： 美国越打台湾牌就越倒霉](https://so.toutiao.com/search?keyword=赖岳谦：+美国越打台湾牌就越倒霉)
+1. [百瑞信托：从未与瑜瑶等私募合作](https://so.toutiao.com/search?keyword=百瑞信托：从未与瑜瑶等私募合作)
+1. [首条深市主板宽基指数发布](https://so.toutiao.com/search?keyword=首条深市主板宽基指数发布)
+1. [大闸蟹每只跌破10元](https://so.toutiao.com/search?keyword=大闸蟹每只跌破10元)
+1. [测评红魔9Pro：唯一盖后纯平手机](https://so.toutiao.com/search?keyword=测评红魔9Pro：唯一盖后纯平手机)
+1. [山东6名省管干部去向明确](https://so.toutiao.com/search?keyword=山东6名省管干部去向明确)
+1. [58岁退休的原市委书记落马](https://so.toutiao.com/search?keyword=58岁退休的原市委书记落马)
+1. [花12000元补地漏一月后又漏水](https://so.toutiao.com/search?keyword=花12000元补地漏一月后又漏水)
+1. [曝“蝴蝶姐姐”简恺乐离婚](https://so.toutiao.com/search?keyword=曝“蝴蝶姐姐”简恺乐离婚)
+1. [我国平均2个成年人就有1个血糖异常](https://so.toutiao.com/search?keyword=我国平均2个成年人就有1个血糖异常)
+1. [统计局：10月份生产原油1733万吨](https://so.toutiao.com/search?keyword=统计局：10月份生产原油1733万吨)
+1. [美总统候选人称若当选将社媒实名制](https://so.toutiao.com/search?keyword=美总统候选人称若当选将社媒实名制)
+1. [中国传媒大学一学生公寓附近起火](https://so.toutiao.com/search?keyword=中国传媒大学一学生公寓附近起火)
+1. [读懂“体制化”的王自如](https://so.toutiao.com/search?keyword=读懂“体制化”的王自如)
 1. [伊能静儿子哈利提前修完学分毕业](https://so.toutiao.com/search?keyword=伊能静儿子哈利提前修完学分毕业)
 1. [澳总理与反对党党首在议会激烈交锋](https://so.toutiao.com/search?keyword=澳总理与反对党党首在议会激烈交锋)
 1. [大爷冰上打陀螺被劝上岸激动回怼](https://so.toutiao.com/search?keyword=大爷冰上打陀螺被劝上岸激动回怼)
-1. [58岁退休的原市委书记落马](https://so.toutiao.com/search?keyword=58岁退休的原市委书记落马)
 1. [高管权色交易事件女子当选非独立董事](https://so.toutiao.com/search?keyword=高管权色交易事件女子当选非独立董事)
 1. [轮船突发船体断裂下沉 无人员伤亡](https://so.toutiao.com/search?keyword=轮船突发船体断裂下沉+无人员伤亡)
-1. [男子2天没上班 同事报警救他一命](https://so.toutiao.com/search?keyword=男子2天没上班+同事报警救他一命)
 1. [不叠被子罚10元是谁给的权力？](https://so.toutiao.com/search?keyword=不叠被子罚10元是谁给的权力？)
 1. [绑架杀害同村女性闫军军被执行枪决](https://so.toutiao.com/search?keyword=绑架杀害同村女性闫军军被执行枪决)
 1. [天津通报“工业园内厂房着火”](https://so.toutiao.com/search?keyword=天津通报“工业园内厂房着火”)
-1. [媒体：任性罚款罚不出美丽乡村](https://so.toutiao.com/search?keyword=媒体：任性罚款罚不出美丽乡村)
 1. [外媒：Mate 60威胁iPhone 15地位](https://so.toutiao.com/search?keyword=外媒：Mate+60威胁iPhone 15地位)
 1. [美国10月通胀数据超预期降温](https://so.toutiao.com/search?keyword=美国10月通胀数据超预期降温)
 1. [俄方：摧毁多架来袭乌克兰无人机](https://so.toutiao.com/search?keyword=俄方：摧毁多架来袭乌克兰无人机)
-1. [赖岳谦： 美国越打台湾牌就越倒霉](https://so.toutiao.com/search?keyword=赖岳谦：+美国越打台湾牌就越倒霉)
 1. [深圳已现腰斩二手房源](https://so.toutiao.com/search?keyword=深圳已现腰斩二手房源)
 1. [四川西昌警方破获“毒鹅肠”大案](https://so.toutiao.com/search?keyword=四川西昌警方破获“毒鹅肠”大案)
 1. [乌称在阿夫迪夫卡挡住俄军十分困难](https://so.toutiao.com/search?keyword=乌称在阿夫迪夫卡挡住俄军十分困难)
-1. [测评红魔9Pro：唯一盖后纯平手机](https://so.toutiao.com/search?keyword=测评红魔9Pro：唯一盖后纯平手机)
 1. [泽连斯基：俄军正在前线加强进攻](https://so.toutiao.com/search?keyword=泽连斯基：俄军正在前线加强进攻)
-1. [大闸蟹每只跌破10元](https://so.toutiao.com/search?keyword=大闸蟹每只跌破10元)
 1. [1-10月商品房销售面积同比下降7.8%](https://so.toutiao.com/search?keyword=1-10月商品房销售面积同比下降7.8%)
 1. [少年强、青年强则中国强](https://so.toutiao.com/search?keyword=少年强、青年强则中国强)
 1. [布拉德·皮特认爱小27岁珠宝设计师](https://so.toutiao.com/search?keyword=布拉德·皮特认爱小27岁珠宝设计师)
