--- a/archives/toutiao-search/2023-11-16.md
+++ b/archives/toutiao-search/2023-11-16.md
@@ -1,49 +1,73 @@
 # 2023-11-16
 
-共 129 条
+共 147 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Nov 16 2023 07:00:42 GMT+0800 (China Standard Time) -->
-1. [习近平抵达会场 拜登在下车处迎接](https://so.toutiao.com/search?keyword=习近平抵达会场+拜登在下车处迎接)
-1. [独家视频：习近平同拜登握手合影](https://so.toutiao.com/search?keyword=独家视频：习近平同拜登握手合影)
+<!-- 最后更新时间 Thu Nov 16 2023 08:29:38 GMT+0800 (China Standard Time) -->
+1. [习近平：美方应停止武装台湾](https://so.toutiao.com/search?keyword=习近平：美方应停止武装台湾)
+1. [习近平同拜登散步交谈](https://so.toutiao.com/search?keyword=习近平同拜登散步交谈)
 1. [携手构建亚太命运共同体](https://so.toutiao.com/search?keyword=携手构建亚太命运共同体)
-1. [走进中美元首会晤的乡村庄园](https://so.toutiao.com/search?keyword=走进中美元首会晤的乡村庄园)
-1. [王自如在格力到底做了什么](https://so.toutiao.com/search?keyword=王自如在格力到底做了什么)
 1. [胡锡进：国际社会如何看中美元首会晤](https://so.toutiao.com/search?keyword=胡锡进：国际社会如何看中美元首会晤)
-1. [渐冻人蔡磊回应首次用药有效](https://so.toutiao.com/search?keyword=渐冻人蔡磊回应首次用药有效)
-1. [以称控制加沙哈马斯宪兵总部](https://so.toutiao.com/search?keyword=以称控制加沙哈马斯宪兵总部)
-1. [“杭州30亿量化跑路”事件冲击扩大](https://so.toutiao.com/search?keyword=“杭州30亿量化跑路”事件冲击扩大)
+1. [王自如在格力到底做了什么](https://so.toutiao.com/search?keyword=王自如在格力到底做了什么)
+1. [走进中美元首会晤的乡村庄园](https://so.toutiao.com/search?keyword=走进中美元首会晤的乡村庄园)
 1. [渐冻人蔡磊腿脚已在逐渐恢复](https://so.toutiao.com/search?keyword=渐冻人蔡磊腿脚已在逐渐恢复)
+1. [广州电动自行车限行政策正式出台](https://so.toutiao.com/search?keyword=广州电动自行车限行政策正式出台)
+1. [小宝宝“熟练作案”开电视放动画片](https://so.toutiao.com/search?keyword=小宝宝“熟练作案”开电视放动画片)
+1. [“杭州30亿量化跑路”事件冲击扩大](https://so.toutiao.com/search?keyword=“杭州30亿量化跑路”事件冲击扩大)
 1. [罗翔辟谣“一夜白头”](https://so.toutiao.com/search?keyword=罗翔辟谣“一夜白头”)
 1. [旧金山机场一路上都是五星红旗](https://so.toutiao.com/search?keyword=旧金山机场一路上都是五星红旗)
 1. [媒体：王自如让全网打工人自愧不如](https://so.toutiao.com/search?keyword=媒体：王自如让全网打工人自愧不如)
-1. [广州电动自行车限行政策正式出台](https://so.toutiao.com/search?keyword=广州电动自行车限行政策正式出台)
-1. [女子涉嫌在店内组织卖淫被拘](https://so.toutiao.com/search?keyword=女子涉嫌在店内组织卖淫被拘)
-1. [美众议长宣布支持特朗普竞选总统](https://so.toutiao.com/search?keyword=美众议长宣布支持特朗普竞选总统)
+1. [95后女孩这英模仿那英走红](https://so.toutiao.com/search?keyword=95后女孩这英模仿那英走红)
+1. [博主实探重庆出租车拉人宰客现象](https://so.toutiao.com/search?keyword=博主实探重庆出租车拉人宰客现象)
+1. [男子2天没上班 同事报警救他一命](https://so.toutiao.com/search?keyword=男子2天没上班+同事报警救他一命)
+1. [轮船突发船体断裂下沉 无人员伤亡](https://so.toutiao.com/search?keyword=轮船突发船体断裂下沉+无人员伤亡)
+1. [问界M5追尾施工车 官方回应](https://so.toutiao.com/search?keyword=问界M5追尾施工车+官方回应)
+1. [行李箱成今年双十一台湾消费爆款](https://so.toutiao.com/search?keyword=行李箱成今年双十一台湾消费爆款)
+1. [男子19岁杀人后潜逃35年落网](https://so.toutiao.com/search?keyword=男子19岁杀人后潜逃35年落网)
+1. [加沙最大医院为何成战争“风暴眼”](https://so.toutiao.com/search?keyword=加沙最大医院为何成战争“风暴眼”)
+1. [老人冠心病发作 女孩拦警车求助](https://so.toutiao.com/search?keyword=老人冠心病发作+女孩拦警车求助)
+1. [赵雅芝70岁生日照](https://so.toutiao.com/search?keyword=赵雅芝70岁生日照)
 1. [猪肉价格大降超40%是什么原因](https://so.toutiao.com/search?keyword=猪肉价格大降超40%是什么原因)
 1. [女演员罗海琼回应发型显老](https://so.toutiao.com/search?keyword=女演员罗海琼回应发型显老)
-1. [男子19岁杀人后潜逃35年落网](https://so.toutiao.com/search?keyword=男子19岁杀人后潜逃35年落网)
-1. [男子2天没上班 同事报警救他一命](https://so.toutiao.com/search?keyword=男子2天没上班+同事报警救他一命)
-1. [红十字会医生讲述加沙医院救治情况](https://so.toutiao.com/search?keyword=红十字会医生讲述加沙医院救治情况)
-1. [女儿遇电诈母亲11万积蓄被骗光](https://so.toutiao.com/search?keyword=女儿遇电诈母亲11万积蓄被骗光)
-1. [问界M5追尾施工车 官方回应](https://so.toutiao.com/search?keyword=问界M5追尾施工车+官方回应)
-1. [中传回应菜鸟驿站火情](https://so.toutiao.com/search?keyword=中传回应菜鸟驿站火情)
-1. [“蓝白”全民调怎么做？朱立伦回应](https://so.toutiao.com/search?keyword=“蓝白”全民调怎么做？朱立伦回应)
-1. [“顺其自然”25年累计捐赠1577万](https://so.toutiao.com/search?keyword=“顺其自然”25年累计捐赠1577万)
+1. [女生被领导批评发现同事偷拍后憋笑](https://so.toutiao.com/search?keyword=女生被领导批评发现同事偷拍后憋笑)
+1. [美股三大指数收涨](https://so.toutiao.com/search?keyword=美股三大指数收涨)
 1. [多家大厂加入鸿蒙开发](https://so.toutiao.com/search?keyword=多家大厂加入鸿蒙开发)
+1. [“这英”回应走红：确实蹭了热度](https://so.toutiao.com/search?keyword=“这英”回应走红：确实蹭了热度)
+1. [湖南省委书记到烂尾楼暗访](https://so.toutiao.com/search?keyword=湖南省委书记到烂尾楼暗访)
+1. [“顺其自然”25年累计捐赠1577万](https://so.toutiao.com/search?keyword=“顺其自然”25年累计捐赠1577万)
+1. [斯科蒂·巴恩斯转发评论追梦锁喉照](https://so.toutiao.com/search?keyword=斯科蒂·巴恩斯转发评论追梦锁喉照)
+1. [初二女生被拖入地下道施暴](https://so.toutiao.com/search?keyword=初二女生被拖入地下道施暴)
+1. [爸爸叮嘱女婿：遇事不可以打她](https://so.toutiao.com/search?keyword=爸爸叮嘱女婿：遇事不可以打她)
+1. [中传回应菜鸟驿站火情](https://so.toutiao.com/search?keyword=中传回应菜鸟驿站火情)
+1. [香港女子遇扫黄翻窗跳下引市民围观](https://so.toutiao.com/search?keyword=香港女子遇扫黄翻窗跳下引市民围观)
+1. [48岁吉雪萍：走出失去女儿的至痛](https://so.toutiao.com/search?keyword=48岁吉雪萍：走出失去女儿的至痛)
+1. [读懂“体制化”的王自如](https://so.toutiao.com/search?keyword=读懂“体制化”的王自如)
 1. [消息称政府拟再出手救楼市](https://so.toutiao.com/search?keyword=消息称政府拟再出手救楼市)
-1. [赵雅芝70岁生日照](https://so.toutiao.com/search?keyword=赵雅芝70岁生日照)
+1. [青岛栈桥拍照大爷被要求停止营业](https://so.toutiao.com/search?keyword=青岛栈桥拍照大爷被要求停止营业)
+1. [网红跳跳狗“黑妞”去世](https://so.toutiao.com/search?keyword=网红跳跳狗“黑妞”去世)
+1. [小杨哥演唱会成本超3000万](https://so.toutiao.com/search?keyword=小杨哥演唱会成本超3000万)
+1. [大爷冰上打陀螺被劝上岸激动回怼](https://so.toutiao.com/search?keyword=大爷冰上打陀螺被劝上岸激动回怼)
+1. [美法官对特朗普初选资格作出裁决](https://so.toutiao.com/search?keyword=美法官对特朗普初选资格作出裁决)
+1. [女儿遇电诈母亲11万积蓄被骗光](https://so.toutiao.com/search?keyword=女儿遇电诈母亲11万积蓄被骗光)
+1. [东北大爷把楼下积雪砌成20米城墙](https://so.toutiao.com/search?keyword=东北大爷把楼下积雪砌成20米城墙)
+1. [雷吉：快船天赋四溢但有些重叠](https://so.toutiao.com/search?keyword=雷吉：快船天赋四溢但有些重叠)
+1. [村超球员回应：被黄日华的真诚感动](https://so.toutiao.com/search?keyword=村超球员回应：被黄日华的真诚感动)
+1. [华科大旁一饺子馆解高数连wifi](https://so.toutiao.com/search?keyword=华科大旁一饺子馆解高数连wifi)
+1. [年近70岁的厅官郭宝成被捕](https://so.toutiao.com/search?keyword=年近70岁的厅官郭宝成被捕)
+1. [习近平抵达会场 拜登在下车处迎接](https://so.toutiao.com/search?keyword=习近平抵达会场+拜登在下车处迎接)
+1. [独家视频：习近平同拜登握手合影](https://so.toutiao.com/search?keyword=独家视频：习近平同拜登握手合影)
+1. [渐冻人蔡磊回应首次用药有效](https://so.toutiao.com/search?keyword=渐冻人蔡磊回应首次用药有效)
+1. [以称控制加沙哈马斯宪兵总部](https://so.toutiao.com/search?keyword=以称控制加沙哈马斯宪兵总部)
+1. [女子涉嫌在店内组织卖淫被拘](https://so.toutiao.com/search?keyword=女子涉嫌在店内组织卖淫被拘)
+1. [美众议长宣布支持特朗普竞选总统](https://so.toutiao.com/search?keyword=美众议长宣布支持特朗普竞选总统)
+1. [红十字会医生讲述加沙医院救治情况](https://so.toutiao.com/search?keyword=红十字会医生讲述加沙医院救治情况)
+1. [“蓝白”全民调怎么做？朱立伦回应](https://so.toutiao.com/search?keyword=“蓝白”全民调怎么做？朱立伦回应)
 1. [网购深度保洁却只擦玻璃 商家回应](https://so.toutiao.com/search?keyword=网购深度保洁却只擦玻璃+商家回应)
 1. [中国气象局启动三级应急响应](https://so.toutiao.com/search?keyword=中国气象局启动三级应急响应)
-1. [初二女生被拖入地下道施暴](https://so.toutiao.com/search?keyword=初二女生被拖入地下道施暴)
-1. [小宝宝“熟练作案”开电视放动画片](https://so.toutiao.com/search?keyword=小宝宝“熟练作案”开电视放动画片)
-1. [美法官对特朗普初选资格作出裁决](https://so.toutiao.com/search?keyword=美法官对特朗普初选资格作出裁决)
 1. [通江集团、张保国集资诈骗案一审](https://so.toutiao.com/search?keyword=通江集团、张保国集资诈骗案一审)
 1. [哈尔滨换上“冰雪新装”](https://so.toutiao.com/search?keyword=哈尔滨换上“冰雪新装”)
 1. [成立民营经济发展局释放什么信号](https://so.toutiao.com/search?keyword=成立民营经济发展局释放什么信号)
 1. [富力地产新增被执行12.5亿](https://so.toutiao.com/search?keyword=富力地产新增被执行12.5亿)
-1. [湖南省委书记到烂尾楼暗访](https://so.toutiao.com/search?keyword=湖南省委书记到烂尾楼暗访)
-1. [年近70岁的厅官郭宝成被捕](https://so.toutiao.com/search?keyword=年近70岁的厅官郭宝成被捕)
 1. [媒体：任性罚款罚不出美丽乡村](https://so.toutiao.com/search?keyword=媒体：任性罚款罚不出美丽乡村)
 1. [赖岳谦： 美国越打台湾牌就越倒霉](https://so.toutiao.com/search?keyword=赖岳谦：+美国越打台湾牌就越倒霉)
 1. [百瑞信托：从未与瑜瑶等私募合作](https://so.toutiao.com/search?keyword=百瑞信托：从未与瑜瑶等私募合作)
@@ -58,12 +82,9 @@
 1. [统计局：10月份生产原油1733万吨](https://so.toutiao.com/search?keyword=统计局：10月份生产原油1733万吨)
 1. [美总统候选人称若当选将社媒实名制](https://so.toutiao.com/search?keyword=美总统候选人称若当选将社媒实名制)
 1. [中国传媒大学一学生公寓附近起火](https://so.toutiao.com/search?keyword=中国传媒大学一学生公寓附近起火)
-1. [读懂“体制化”的王自如](https://so.toutiao.com/search?keyword=读懂“体制化”的王自如)
 1. [伊能静儿子哈利提前修完学分毕业](https://so.toutiao.com/search?keyword=伊能静儿子哈利提前修完学分毕业)
 1. [澳总理与反对党党首在议会激烈交锋](https://so.toutiao.com/search?keyword=澳总理与反对党党首在议会激烈交锋)
-1. [大爷冰上打陀螺被劝上岸激动回怼](https://so.toutiao.com/search?keyword=大爷冰上打陀螺被劝上岸激动回怼)
 1. [高管权色交易事件女子当选非独立董事](https://so.toutiao.com/search?keyword=高管权色交易事件女子当选非独立董事)
-1. [轮船突发船体断裂下沉 无人员伤亡](https://so.toutiao.com/search?keyword=轮船突发船体断裂下沉+无人员伤亡)
 1. [不叠被子罚10元是谁给的权力？](https://so.toutiao.com/search?keyword=不叠被子罚10元是谁给的权力？)
 1. [绑架杀害同村女性闫军军被执行枪决](https://so.toutiao.com/search?keyword=绑架杀害同村女性闫军军被执行枪决)
 1. [天津通报“工业园内厂房着火”](https://so.toutiao.com/search?keyword=天津通报“工业园内厂房着火”)
@@ -77,7 +98,6 @@
 1. [1-10月商品房销售面积同比下降7.8%](https://so.toutiao.com/search?keyword=1-10月商品房销售面积同比下降7.8%)
 1. [少年强、青年强则中国强](https://so.toutiao.com/search?keyword=少年强、青年强则中国强)
 1. [布拉德·皮特认爱小27岁珠宝设计师](https://so.toutiao.com/search?keyword=布拉德·皮特认爱小27岁珠宝设计师)
-1. [东北大爷把楼下积雪砌成20米城墙](https://so.toutiao.com/search?keyword=东北大爷把楼下积雪砌成20米城墙)
 1. [哈马斯谴责以军攻入希法医院](https://so.toutiao.com/search?keyword=哈马斯谴责以军攻入希法医院)
 1. [加沙孩子雨中奔跑庆祝雨季到来](https://so.toutiao.com/search?keyword=加沙孩子雨中奔跑庆祝雨季到来)
 1. [哈马斯称以色列不愿达成停火协议](https://so.toutiao.com/search?keyword=哈马斯称以色列不愿达成停火协议)
@@ -91,8 +111,6 @@
 1. [高校教学楼突现臭味 师生下楼躲避](https://so.toutiao.com/search?keyword=高校教学楼突现臭味+师生下楼躲避)
 1. [困扰近亿人的慢阻肺究竟是什么](https://so.toutiao.com/search?keyword=困扰近亿人的慢阻肺究竟是什么)
 1. [前10月房地产开发投资仍处低位](https://so.toutiao.com/search?keyword=前10月房地产开发投资仍处低位)
-1. [95后女孩这英模仿那英走红](https://so.toutiao.com/search?keyword=95后女孩这英模仿那英走红)
-1. [“这英”回应走红：确实蹭了热度](https://so.toutiao.com/search?keyword=“这英”回应走红：确实蹭了热度)
 1. [专家：年底前有可能再次降准](https://so.toutiao.com/search?keyword=专家：年底前有可能再次降准)
 1. [卡梅伦将如何影响中英关系未来走向](https://so.toutiao.com/search?keyword=卡梅伦将如何影响中英关系未来走向)
 1. [“双十一”在台掀热潮 国台办回应](https://so.toutiao.com/search?keyword=“双十一”在台掀热潮+国台办回应)
